--- a/package.json
+++ b/package.json
@@ -9,17 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@next/mdx": "^13.4.2",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.30.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase-admin": "^11.8.0",
+    "framer-motion": "^10.12.10",
+    "gray-matter": "^4.0.3",
+    "mdx-prism": "^0.3.4",
     "next": "13.4.2",
+    "next-mdx-remote": "^4.4.1",
+    "next-plausible": "^3.7.2",
+    "next-seo": "^6.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reading-time": "^1.5.0",
+    "remark-autolink-headings": "^7.0.1",
+    "remark-code-titles": "^0.1.2",
+    "remark-slug": "^7.0.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "vcards-js": "^2.10.0"
   }
 }
