--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "samuelkraft-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "type-check": "./node_modules/.bin/tsc",
-    "cache-clear": "./node_modules/.bin/contentlayer build --verbose --clearCache"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.7.7",
-    "@mapbox/polyline": "^1.1.1",
-    "@next/font": "^13.1.1",
-    "@radix-ui/colors": "^0.1.8",
-    "clsx": "^1.2.1",
-    "contentlayer": "^0.2.9",
-    "faunadb": "^4.7.1",
-    "framer-motion": "^10.11.2",
-    "globby": "^13.1.3",
-    "next": "13.1.1",
-    "next-contentlayer": "^0.2.9",
-    "next-seo": "^6.4.0",
-    "next-themes": "^0.2.1",
-    "random-words": "^1.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "rehype-prism-plus": "^1.5.0",
-    "remark-code-titles": "^0.1.2",
-    "sass": "^1.57.1",
-    "slugify": "^1.6.5",
-    "swr": "^1.3.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.2.18",
-    "autoprefixer": "^10.4.17",
-    "eslint": "8.56.0",
-    "eslint-config-next": "13.3.0",
-    "gray-matter": "^4.0.3",
-    "postcss": "^8.4.21",
-    "rss": "^1.2.2",
-    "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
-  }
+	"name": "yuricunha",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"type-check": "./node_modules/.bin/tsc",
+		"cache-clear": "./node_modules/.bin/contentlayer build --verbose --clearCache"
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.7.7",
+		"@mapbox/polyline": "^1.1.1",
+		"@next/font": "^13.1.1",
+		"@radix-ui/colors": "^0.1.8",
+		"clsx": "^1.2.1",
+		"contentlayer": "^0.2.9",
+		"faunadb": "^4.7.1",
+		"framer-motion": "^10.11.2",
+		"globby": "^13.1.3",
+		"next": "13.1.1",
+		"next-contentlayer": "^0.2.9",
+		"next-seo": "^6.4.0",
+		"next-themes": "^0.2.1",
+		"random-words": "^1.2.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"rehype-prism-plus": "^1.5.0",
+		"remark-code-titles": "^0.1.2",
+		"sass": "^1.57.1",
+		"slugify": "^1.6.5",
+		"swr": "^1.3.0"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
+		"@types/node": "18.11.18",
+		"@types/react": "18.0.26",
+		"@types/react-dom": "18.2.18",
+		"autoprefixer": "^10.4.17",
+		"eslint": "8.56.0",
+		"eslint-config-next": "13.3.0",
+		"gray-matter": "^4.0.3",
+		"postcss": "^8.4.21",
+		"rss": "^1.2.2",
+		"tailwindcss": "^3.2.4",
+		"typescript": "4.9.4"
+	}
 }
