--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.15",
   "description": "The prettier config for tszhong0411's projects",
   "license": "MIT",
-  "author": "tszhong0411 <me@honghong.me> (https://github.com/tszhong0411/)",
-  "homepage": "https://github.com/tszhong0411/honghong.me#readme",
+  "author": "tszhong0411 <me@yuricunha.com> (https://github.com/tszhong0411/)",
+  "homepage": "https://github.com/tszhong0411/yuricunha.com#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tszhong0411/honghong.me.git"
+    "url": "git+https://github.com/tszhong0411/yuricunha.com.git"
   },
   "bugs": {
-    "url": "https://github.com/tszhong0411/honghong.me/issues"
+    "url": "https://github.com/tszhong0411/yuricunha.com/issues"
   },
   "type": "module",
   "main": "./dist/index.js",
