--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "tszhong0411 <me@yuricunha.com> (https://github.com/tszhong0411/)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tszhong0411/yuricunha.com.git"
+    "url": "git+https://github.com/tszhong0411/beta-website.git"
   },
   "type": "module",
   "scripts": {
