--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
-  "name": "website",
-  "author": "isyuricunha <me@yuricunha.com> (https://github.com/isyuricunha/)",
+  "name": "honghong-me",
+  "author": "tszhong0411 <me@honghong.me> (https://github.com/tszhong0411/)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/isyuricunha/website.git"
+    "url": "git+https://github.com/tszhong0411/honghong.me.git"
   },
   "type": "module",
   "scripts": {
